[project]
name = "pretix-venueless"
dynamic = ["version"]
description = "Integrates pretix with venueless.org"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["pretix"]
authors = [
    {name = "pretix team", email = "support@pretix.eu"},
]
maintainers = [
    {name = "pretix team", email = "support@pretix.eu"},
]

dependencies = [
    "PyJWT",
]

[project.entry-points."pretix.plugin"]
pretix_venueless = "pretix_venueless:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/pretix/pretix-venueless"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_venueless.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
